--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Начало-->
 		<nav>
 			<input type="checkbox" id="showmenu"/>
-			<label for="showmenu" class="showmenu"><img src='../res/logo.png' alt=''></label>
+			<label for="showmenu" class="showmenu"><img src='res/logo.png' alt=''></label>
 			<!-- <label for="showmenu" class="back"></label> -->
 			<ul>
 				<li><a href="#begin">Блок №1</a></li>
