--- a/lab/index.html
+++ b/lab/index.html
@@ -59,9 +59,9 @@
 			<h1>В наличии</h1>
 			<h3 id='block_2_1'>Wi-Fi розетка.</h3>
 			<div class='photo_box'>
-				<a href='#' target='_self' class='img_1'></a>
-				<a href='#' target='_self' class='img_2'></a>
-				<a href='#' target='_self' class='img_3'></a>
+				<a href='#' target='_self' class='img_1 img_wow'></a>
+				<a href='#' target='_self' class='img_2 img_wow '></a>
+				<a href='#' target='_self' class='img_3 img_wow '></a>
 			</div>
 			<p>Устройство, позволяющее включать или выключать электроприборы мощностью до 2 киловатт со своего мобильного телефона или планшета. Это может быть насос в скважине, освещение во дворе, гаражные ворота и тому подобные удаленные предметы, включать\выключать которые обычным способом, по каким-либо причинам, неудобно.</p>
 		</section>
