--- a/udadmin/index.html
+++ b/udadmin/index.html
@@ -101,7 +101,7 @@
 				<li>udadmi@gmail.com</li>
 				<li><a href='http://fb.me/udadmi'>facebook</a></li>
 			</ul>
-			<p>Письма с любым содержанием, но не имеющие в теме письма слова "Заявка" не рассматриваются и отправляются прямиком в спам. Извините! Защита от роботов-спамеров.</p>
+			<p>Письма с любым содержанием, но не имеющие в теме письма слова "Заявка" не рассматриваются и отправляются прямиком в спам. Извините - защита от роботов.</p>
 		</section>
 		<section>
 			<div id='floatTip'></div>
