--- a/udadmin/index.html
+++ b/udadmin/index.html
@@ -111,6 +111,25 @@
 Write to me: woxx13@gmail.com' />
 				</div>
 			</div>
+			<div>
+				<!-- Default Statcounter code for udadmin
+https://woxx13.github.io/udadmin/ -->
+<script type="text/javascript">
+var sc_project=12357321; 
+var sc_invisible=0; 
+var sc_security="3106e891"; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12357321/0/3106e891/0/"
+alt="Web Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
+			</div>
 		</section>
 	</body>
 	<script>
