--- a/lab/index.html
+++ b/lab/index.html
@@ -80,11 +80,30 @@
 			<p>homautolab@gmail.com</p>
 		</section>
 		<section>
-			<div id='floatTip'></div>
 			<div style='text-align: center; margin-top: 20px; z-index: 1900;'>
-				<div  style='width: 30%; display: inline-block; vertical-align:top;'>
+				<div  style='width: 100%; display: inline-block; vertical-align:top;'>
 					<img src='res/niotech.png' title='All rights reserved. &copy; 2020
-Write to me: homautolab@gmail.com' />
+Write to me: woxx13@gmail.com' />
+				</div>
+				<div  style='width: 100%;vertical-align:top;'>
+					<!-- Default Statcounter code for lab
+					https://woxx13.github.io/lab/ -->
+					<script type="text/javascript">
+					var sc_project=12359124; 
+					var sc_invisible=0; 
+					var sc_security="c518878b"; 
+					var scJsHost = "https://";
+					document.write("<sc"+"ript type='text/javascript' src='" +
+					scJsHost+
+					"statcounter.com/counter/counter.js'></"+"script>");
+					</script>
+					<noscript><div class="statcounter"><a title="Web Analytics
+					Made Easy - StatCounter" href="https://statcounter.com/"
+					target="_blank"><img class="statcounter"
+					src="https://c.statcounter.com/12359124/0/c518878b/0/"
+					alt="Web Analytics Made Easy -
+					StatCounter"></a></div></noscript>
+					<!-- End of Statcounter Code -->
 				</div>
 			</div>
 		</section>
