--- a/udadmin/index.html
+++ b/udadmin/index.html
@@ -104,31 +104,31 @@
 			<p>Письма с любым содержанием, но не имеющие в теме письма слова "Заявка" не рассматриваются и отправляются прямиком в спам. Извините - защита от роботов.</p>
 		</section>
 		<section>
-			<div id='floatTip'></div>
 			<div style='text-align: center; margin-top: 20px; z-index: 1900;'>
-				<div  style='width: 30%; display: inline-block; vertical-align:top;'>
+				<div  style='width: 100%; display: inline-block; vertical-align:top;'>
 					<img src='res/niotech.png' title='All rights reserved. &copy; 2020
 Write to me: woxx13@gmail.com' />
 				</div>
-			</div>
-			<div>
-				<!-- Default Statcounter code for udadmin
-https://woxx13.github.io/udadmin/ -->
-<script type="text/javascript">
-var sc_project=12357321; 
-var sc_invisible=0; 
-var sc_security="3106e891"; 
-var scJsHost = "https://";
-document.write("<sc"+"ript type='text/javascript' src='" +
-scJsHost+
-"statcounter.com/counter/counter.js'></"+"script>");
-</script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12357321/0/3106e891/0/"
-alt="Web Analytics"></a></div></noscript>
-<!-- End of Statcounter Code -->
+				<div  style='width: 100%;vertical-align:top;'>
+					<!-- Default Statcounter code for udadmin
+					https://woxx13.github.io/udadmin/ -->
+					<script type="text/javascript">
+					var sc_project=12357321; 
+					var sc_invisible=0; 
+					var sc_security="3106e891"; 
+					var scJsHost = "https://";
+					document.write("<sc"+"ript type='text/javascript' src='" +
+					scJsHost+
+					"statcounter.com/counter/counter.js'></"+"script>");
+					</script>
+					<noscript><div class="statcounter"><a title="Web Analytics
+					Made Easy - StatCounter" href="https://statcounter.com/"
+					target="_blank"><img class="statcounter"
+					src="https://c.statcounter.com/12357321/0/3106e891/0/"
+					alt="Web Analytics Made Easy -
+					StatCounter"></a></div></noscript>
+					<!-- End of Statcounter Code -->
+				</div>
 			</div>
 		</section>
 	</body>
