--- a/aws/index.html
+++ b/aws/index.html
@@ -20,10 +20,10 @@
 <!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Начало-->
 		<nav>
 			<input type="checkbox" id="showmenu"/>
-			<label for="showmenu" class="showmenu"><img src='res/logo.png' title='меню' alt=''></label>
+			<label for="showmenu" class="showmenu"><img src='res/logo.png' title='menu' alt=''></label>
 			<!-- <label for="showmenu" class="back"></label> -->
 			<ul>
-				<li><a href="#begin">Визуализация</a></li>
+				<li><a href="#begin">visualization</a></li>
 			</ul>
 		</nav>
 <!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Конец-->
