--- a/lab/index.html
+++ b/lab/index.html
@@ -7,82 +7,124 @@
 		<meta http-equiv='x-ua-compatible' 	content='ie=edge'>
 		<meta name='author' 				content='Kuzmenko Vadim aka woxx'>
 		<meta name='description' 			content='Лаборатория домашней автоматики'>
-		<meta name='keywords' 				content='лаборатория,домашняя, автоматика,wi-fi,розетка,умный,дом,интернет,вещей,IOT'>
+		<meta name='keywords' 				content='лаборатория,домашняя, автоматика,wi-fi,internet,socket,розетка,автомат,наполнения,емкости,визуализация,управление,умный,дом,интернет,вещей,IOT'>
 		<link rel='stylesheet' 				href='css/reset.css'>
 		<link rel='stylesheet' 				href='css/style.css'>
 		<link rel='shortcut icon' 			href='favicon.ico'>
-		<!--[if lt ie 9]>
-		<script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'></script>
-		<![endif]-->
 	</head>
 	<body>
-		<!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Начало-->
+<!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Начало-->
 		<nav>
-			<input type="checkbox" id="showmenu"/>
-			<label for="showmenu" class="showmenu"><img src='res/logo.png' alt=''></label>
-			<!-- <label for="showmenu" class="back"></label> -->
+			<input type='checkbox' id='showmenu'/>
+			<label for='showmenu' class='showmenu'><img src='res/logo.png' alt=''></label>
+			<!-- <label for='showmenu' class='back'></label> -->
 			<ul>
-				<li><a href="#begin">Главная</a></li>
 				<li>
-					<a href="#block_2">В наличии</a>
-					<input type="checkbox" id="menu2">
-					<label for="menu2">&#9660;</label>
+					<a href='index.html'>Выбрать язык</a>
+					<a href='index_ua.html'>Обрати мову</a>
+					<a href='index_en.html'>Choose language</a>
+				</li>
+				<li><a href='#begin'>Главная</a></li>
+				<li>
+					<a href='#block_2'>Каталог</a>
+					<input type='checkbox' id='menu2'>
+					<label for='menu2'>&#9660;</label>
 					<ul>
-						<li><a href="#block_2_1">Wi-Fi розетка</a></li>
+						<li><a href='#block_2_1'>Wi-Fi розетка</a></li>
+					</ul>
+					<ul>
+						<li><a href='#block_2_2'>Internet розетка</a></li>
+					</ul>
+					<ul>
+						<li><a href='#block_2_3'>Автомат пополнения</a></li>
+					</ul>
+					<ul>
+						<li><a href='#block_2_4'>Визуализация и управление</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#block_3">Заказать</a>
-					<input type="checkbox" id="menu3">
+					<a href='#block_3'>Заказать</a>
+					<input type='checkbox' id='menu3'>
 				</li>
 				<li>
-					<a href="#block_4">Разработать</a>
-					<input type="checkbox" id="menu4">
-				</li>
-				<li>
-					<a href="#block_5">Контакты</a>
-					<input type="checkbox" id="menu5">
+					<a href='#block_4'>Контакты</a>
+					<input type='checkbox' id='menu5'>
 				</li>
 			</ul>
 		</nav>
-		<!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Конец-->
+<!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Конец-->
 		<section class='block_0' id='block_1'>
 			<h1>Главная</h1>
-			<p>Лаборатория неустанно трудится над воплощением в железе умных устройств для дома. Наши разработки могут находится в трех стадиях готовности:</p>
-				<ul style='text-align: center; text-decoration: none; line-height: 1.5em;'>
-					<li><a href="#block_2">Испытано! Есть в наличии. Купить!</a></li>
-					<li><a href="#block_3">Испытано! Нет в наличии. Заказать!</a></li>
-					<li><a href="#block_4">Нужно разработать!</a></li>
-				</ul>
+			<p>Лаборатория неустанно трудится над разработкой и воплощением в железе умных устройств для дома и не только. Как традиционных, так и нестандартного назначения. Все устройства комплектуются программным обеспечением собственной разработки.</p>
+			<p>С примерами разработки Вы можете ознакомиться в разделе <a href='#block_2'>Каталог.</a></p>
+			<p>А в разделе с соответствующим названием Вы можете <a href='#block_3'>заказать</a> понравившееся устройство, систему устройств или разработку чего-то нового.</p>
+			<p>Предупреждаем, что у нас НЕ магазин, устройства часто единственные в своем роде, иногда с уникальными свойствами и характеристиками, поэтому цена и сроки разработки и изготовления - соответствующие.</p>
 		</section>
 		<section class='block_0' id='block_2'>
-			<h1>В наличии</h1>
-			<h3 id='block_2_1'>Wi-Fi розетка.</h3>
-			<div class='photo_box'>
-				<a href='#' target='_self' class='img_1 img_wow'></a>
-				<a href='#' target='_self' class='img_2 img_wow '></a>
-				<a href='#' target='_self' class='img_3 img_wow '></a>
-			</div>
-			<p>Устройство, позволяющее включать или выключать электроприборы мощностью до 2 киловатт со своего мобильного телефона, планшета, компьютера или ноутбука. Это может быть насос в скважине, освещение во дворе, гаражные ворота и тому подобные удаленные предметы, включать\выключать которые обычным способом, по каким-либо причинам, неудобно. Для работы с устройством интернет не нужен! Подробности использования  - в видео.</p>
-			<video style='width: 100%;' src='res/wi_fi_socket_2.mp4' poster='res/wi-fi_socket_poster.jpg' controls></video>
+			<h1>Каталог</h1>
+			<article>
+				<h3 id='block_2_1'>Wi-Fi розетка</h3>
+				<hr>
+				<div class='photo_box'>
+					<a href='#' target='_self' class='img_1 img_wow'></a>
+					<a href='#' target='_self' class='img_2 img_wow '></a>
+					<a href='#' target='_self' class='img_3 img_wow '></a>
+				</div>
+				<p>Простое и надежное устройство, позволяющее включать или выключать электроприборы мощностью до 2 киловатт со своего мобильного телефона, планшета, компьютера или ноутбука. Это может быть насос в скважине, освещение во дворе, гаражные ворота и тому подобные удаленные предметы, включать\выключать которые обычным способом по каким-либо причинам неудобно. Для работы с устройством ни интернет, ни предварительная установка каких-либо приложений не нужны! Подробности использования  - в видео.</p>
+				<video style='width: 100%;' poster='res/wi_fi_socket_poster.jpg' controls>
+					<source  src='res/wi_fi_socket_ru.mp4'>
+				</video>
+			</article>
+			<article>
+				<h3 id='block_2_2'>Internet розетка</h3>
+				<hr>
+				<div class='photo_box'>
+					<a href='#' target='_self' class='img_1 img_wow'></a>
+					<a href='#' target='_self' class='img_2 img_wow '></a>
+					<a href='#' target='_self' class='img_3 img_wow '></a>
+				</div>
+				<p>Конструктивно это полная копия <a href='#block_2_1'>wi-fi розетки</a>, но отличающаяся от неё программным обеспечением. Т.е. это устройство также позволяет включать или выключать электроприборы мощностью до 2 киловатт со своего мобильного телефона, планшета, компьютера или ноутбука. Но при этом, физически, Вы можете находиться хоть на другом полушарии Земли. Однако, для реализации такой функциональности работы устройства, в области его досягаемости должен быть роутер с надежным интернет-соединением и соответствующей настройкой.</p>
+			</article>
+			<article>
+				<h3 id='block_2_3'>Автомат пополнения емкости</h3>
+				<hr>
+				<div class='photo_box'>
+					<a href='#' target='_self' class='img_3_1 img_wow'></a>
+					<a href='#' target='_self' class='img_3_2 img_wow '></a>
+					<a href='#' target='_self' class='img_3_3 img_wow '></a>
+				</div>
+				<p>Устройство, автоматически включающее насос, если уровень жидкости в контролируемой емкости опустился до минимального уровня и выключающее его, если уровень достиг максимального значения. Устройство состоит из оригинальной системы герконовых датчиков, размещаемых в герметично запаянной полипропиленовой трубе, погруженной в контролируемую емкость, поплавка, блока управления, блока питания и соединительных кабелей.</p>
+			</article>
+			<article>
+				<h3 id='block_2_4'>Визуализация и управление процессами</h3>
+				<hr>
+				<div class='photo_box'>
+					<video style='width: 200px;' poster='res/aws_poster.jpg' controls>
+						<source  src='heap/visualization.mp4' >
+					</video>
+				</div>
+				<p>Любой комплекс устройств из числа приобретенных у нас в лаборатории может быть снабжен таким дополнительным приложением. Допустим, Вам необходимо не только включать и выключать кран капельного полива где-нибудь на удаленном участке, но и контролировать степень наполнения связанной с ним буферной емкости. Позвольте <a href='https://woxx13.github.io/aws' target='_blank'>представить</a> Вам эмуляцию такого приложения.</p>
+			</article>
 		</section>
 		<section class='block_0' id='block_3'>
 			<h1>Заказать</h1>
-			<p>То, что Вы хотели бы приобрести, не всегда есть в наличии, поэтому Вы можете заказать понравившееся устройство, оплатив 50% его стоимости для ускорения приобретения деталей и компонентов, необходимых для его сборки.</p>
+			<p>Понравившееся устройство Вы можете заказать наложенным платежом службой <a href='https://novaposhta.ua/ru' target='_blank'>'Нова Пошта'</a>, написав нам письмо с указанием следующих данных:</p>
+			<ul style='margin: 0 5% 5% 5%;line-height: 1.25em;'>
+				<li>Что хотите заказать?</li>
+				<li>Фамилия, Имя, Отчество получателя.</li>
+				<li>Телефон получателя.</li>
+				<li>Адрес доставки.</li>
+			</ul>
+			<p>Если у Вас есть полное понимание какое устройство Вам необходимо, то мы можем для Вас разработать такое устройство с нуля. <a href='#block_4'>Пишите!</a></p>
 		</section>
 		<section class='block_0' id='block_4'>
-			<h1>Разработать</h1>
-			<p>Если у Вас есть полное понимание какое устройство Вам необходимо, но Вы не обнаружили таковое ни среди готовых, ни в разделе Заказать, то мы можем для Вас разработать такое устройство с нуля. Равно как и модернизировать уже готовое устройство.</p>
-			<p>Например, если Вы хотели бы приобрести десяток wi-fi розеток для своего дома, то, согласитесь, удобнее было бы, если бы все розетки подключались к уже существующей домашней wi-fi сети и ими можно было бы управлять через интернет, находясь даже на другой стороне земного шара. Это возможно. Cвяжитесь с нами!</p>
-		</section>
-		<section class='block_0' id='block_5'>
 			<h1>Контакты</h1>
 			<p>homautolab@gmail.com</p>
 		</section>
 		<section>
 			<div style='text-align: center; margin-top: 20px; z-index: 1900;'>
 				<div  style='width: 100%; display: inline-block; vertical-align:top;'>
-					<img src='res/niotech.png' title='All rights reserved. &copy; 2020
+					<img src='res/niotech.png' title='All rights reserved. &copy; 2021
 Write to me: woxx13@gmail.com' />
 				</div>
 				<div  style='width: 100%;vertical-align:top;'>
