--- a/lab/index.html
+++ b/lab/index.html
@@ -72,7 +72,7 @@
 				</div>
 				<p>Простое и надежное устройство, позволяющее включать или выключать электроприборы мощностью до 2 киловатт со своего мобильного телефона, планшета, компьютера или ноутбука. Это может быть насос в скважине, освещение во дворе, гаражные ворота и тому подобные удаленные предметы, включать\выключать которые обычным способом по каким-либо причинам неудобно. Для работы с устройством ни интернет, ни предварительная установка каких-либо приложений не нужны! Подробности использования  - в видео.</p>
 				<video style='width: 100%;' poster='res/wi_fi_socket_poster.jpg' controls>
-					<source  src='res/wi_fi_socket_ru.mp4'>
+					<source  src='res/wi_fi_socket.mp4'>
 				</video>
 			</article>
 			<article>
