--- a/lab/index.html
+++ b/lab/index.html
@@ -100,7 +100,7 @@
 				<hr>
 				<div class='photo_box'>
 					<video style='width: 200px;' poster='res/aws_poster.jpg' controls>
-						<source  src='heap/visualization.mp4' >
+						<source  src='res/visualization.mp4' >
 					</video>
 				</div>
 				<p>Любой комплекс устройств из числа приобретенных у нас в лаборатории может быть снабжен таким дополнительным приложением. Допустим, Вам необходимо не только включать и выключать кран капельного полива где-нибудь на удаленном участке, но и контролировать степень наполнения связанной с ним буферной емкости. Позвольте <a href='https://woxx13.github.io/aws' target='_blank'>представить</a> Вам эмуляцию такого приложения.</p>
