--- a/lab/index_en.html
+++ b/lab/index_en.html
@@ -100,7 +100,7 @@
 				<hr>
 				<div class='photo_box'>
 					<video style='width: 200px;' poster='res/aws_poster.jpg' controls>
-						<source  src='heap/visualization.mp4' >
+						<source  src='res/visualization.mp4' >
 					</video>
 				</div>
 				<p>Any device purchased from our laboratory can be equipped with this additional application. Suppose you need to not only turn on and off the drip irrigation tap somewhere in a remote area, but also control the degree of filling of the associated buffer tank. Let me <a href='https://woxx13.github.io/aws' target='_blank'>introduce</a> you to an emulation of such an application.</p>
