--- a/lab/index_ua.html
+++ b/lab/index_ua.html
@@ -100,7 +100,7 @@
 				<hr>
 				<div class='photo_box'>
 					<video style='width: 200px;' poster='res/aws_poster.jpg' controls>
-						<source  src='heap/visualization.mp4' >
+						<source  src='res/visualization.mp4' >
 					</video>
 				</div>
 				<p>Будь-який пристрій з числа придбаних у нас в лабораторії може бути забезпечено таким додатком. Припустимо, Вам необхідно не тільки вмикати і вимикати кран крапельного поливу де-небудь на віддаленій ділянці, а й контролювати ступінь наповнення пов'язаної з ним буферної ємності. Дозвольте <a href='https://woxx13.github.io/aws' target='_blank'>запропонувати</a> Вам емуляцію такого додатку.</p>
