--- a/lab/index_en.html
+++ b/lab/index_en.html
@@ -11,6 +11,7 @@
 		<link rel='stylesheet' 				href='css/reset.css'>
 		<link rel='stylesheet' 				href='css/style.css'>
 		<link rel='shortcut icon' 			href='favicon.ico'>
+		<script src='js/show_menu.js'></script>
 	</head>
 	<body>
 <!--Многоуровневое, выдвигающееся из-за края экрана при нажатии на логотип, меню. Начало-->
@@ -149,5 +150,6 @@ Write to me: woxx13@gmail.com' />
 				</div>
 			</div>
 		</section>
+		<script src='js/hide_menu.js'></script>
 	</body>
 </html>
