--- a/grush/index.html
+++ b/grush/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<meta charset='UTF-8' />
+	<meta charset='UTF-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<title>Грушевський очима учнів Піддубненської школи</title>
@@ -13,9 +13,6 @@
 	<link rel='stylesheet' 		href='css/demo.css' />
 	<link rel='stylesheet' 		href='css/card.css' />
 	<link rel='stylesheet' 		href='css/pattern.css' />
-	<!--[if IE]>
-	  <script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'></script>
-	<![endif]-->
 	<script>
 		if (navigator.userAgent.toLowerCase().indexOf('firefox') > -1)
 		{
@@ -364,17 +361,7 @@
 			<!-- /cards -->
 <div class='block_counters'>
 	<div  style='display: inline-block; margin-left: 4%; float: left;'>
-		<a href='http://gurtok.netne.net' target='_blank' style='background: #333; border-radius: 5px;'><img src='img/logo.gif' width='70px' title='Завітайте, будь ласка, до сайту нашого гуртка!' /></a>
-	</div>
-	<div style='display: inline-block; margin: 40px 5% 0 0; float: right;'>
-<!-- whos.amung.us -->
-		<script id='_waudem'>var _wau = _wau || [];
-		_wau.push(['colored', 'vq5l9cvoo1p5', 'dem', '333333ffffff']);
-		(function() {var s=document.createElement('script'); s.async=true;
-		s.src='//widgets.amung.us/colored.js';
-		document.getElementsByTagName('head')[0].appendChild(s);
-		})();</script>
-<!-- whos.amung.us -->
+		<a href='http://woxx13.github.io/gurt' target='_blank' style='background: #333; border-radius: 5px;'><img src='img/logo.gif' width='70px' title='Завітайте, будь ласка, до сайту нашого гуртка!' /></a>
 	</div>
 </div>
 		</div><!-- /content -->
