--- a/gurt/index.html
+++ b/gurt/index.html
@@ -135,7 +135,7 @@
 <!--/Connection styles-->		
 	</head>
 	<body>
-	<marquee class='block_1'>- - - info - - - On the 150-th anniversary of Mikhail Grushevskiy own circle was created website <a href='http://grush.site88.net' target='_blank'>http://grush.site88.net</a>  - - - info - - - The circle will take a gift or for a nominal fee of any generation computer equipment in any condition - - - info - - - </marquee>
+	<marquee class='block_1'>- - - info - - - On the 150-th anniversary of Mikhail Grushevskiy own circle was created website <a href='http://woxx13.github.io/grush' target='_blank'>http://woxx13.github.io/grush</a>  - - - info - - - The circle will take a gift or for a nominal fee of any generation computer equipment in any condition - - - info - - - </marquee>
 	<div  class='block_lang'>
 		<a href='index_ru.html' title='русская версия'><h4>RU</a>
 		&nbsp;
@@ -219,30 +219,6 @@ width="88" height="31" border="0" /></a></noscript>
 <!--/ MyCounter -->
 				</div>
 		</div>
-<!--Left ads block. Start-->		
-<div class='block_ads_left'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Left ads block. End-->	
-<!--Right ads block. Start-->
-<div class='block_ads_right'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Right ads block. End-->	
 	</body>
 <script>
 		document.onmousemove = moveTip;
