--- a/gurt/index_ua.html
+++ b/gurt/index_ua.html
@@ -134,7 +134,7 @@
 <!--/Підключення стилів-->		
 	</head>
 	<body>
-	<marquee class='block_1'> - - - info - - - До 150-річчя Михайла Сергійовича Грушевського силами гуртка був створений сайт <a href='http://grush.site88.net' target='_blank'>http://grush.site88.net</a> - - - info - - - Гурток прийме в дар або за символічну плату комп'ютерну техніку будь-якого покоління в будь-якому стані - - - info - - - </marquee>
+	<marquee class='block_1'> - - - info - - - До 150-річчя Михайла Сергійовича Грушевського силами гуртка був створений сайт <a href='http://woxx13.github.io/grush' target='_blank'>http://woxx13.github.io/grush</a> - - - info - - - Гурток прийме в дар або за символічну плату комп'ютерну техніку будь-якого покоління в будь-якому стані - - - info - - - </marquee>
 	<div  class='block_lang'>
 		<a href='index.html' title='english version'><h4>EN</a>
 		&nbsp;&nbsp;
@@ -218,30 +218,6 @@ width="88" height="31" border="0" /></a></noscript>
 <!--/ MyCounter -->
 				</div>
 		</div>
-<!--Left ads block. Start-->		
-<div class='block_ads_left'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Left ads block. End-->	
-<!--Right ads block. Start-->
-<div class='block_ads_right'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Right ads block. End-->	
 	</body>
 <script>
 		document.onmousemove = moveTip;
