--- a/gurt/stas_portfolio_ru.html
+++ b/gurt/stas_portfolio_ru.html
@@ -18,7 +18,7 @@
 <!--/Подключение стилей-->
 	</head>
 	<body>
-	<marquee class='block_1'>- - - info - - - К 150-летию Михаила Сергеевича Грушевского силами кружка был создан сайт <a href='http://grush.site88.net' target='_blank'>http://grush.site88.net</a>  - - - info - - - Кружок примет в дар или за символическую плату компьютерную технику любого поколения в любом состоянии - - - info - - - </marquee>
+	<marquee class='block_1'>- - - info - - - К 150-летию Михаила Сергеевича Грушевского силами кружка был создан сайт <a href='http://woxx13.github.io/grush' target='_blank'>http://woxx13.github.io/grush</a>  - - - info - - - Кружок примет в дар или за символическую плату компьютерную технику любого поколения в любом состоянии - - - info - - - </marquee>
 	<a href='index_ru.html'><img src='res/logo.gif' class='block_logo' title='На главную страницу' alt='' /></a>
 		<div class='block_0'>
 			<h2 class='title_of_block'>Как вставить аудио в интернет-страничку</h2>
@@ -74,30 +74,6 @@
 <!--/ MyCounter -->
 				</div>
 		</div>
-<!--Left ads block. Start-->		
-<div class='block_ads_left'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Left ads block. End-->	
-<!--Right ads block. Start-->
-<div class='block_ads_right'>
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>	
-	<div style='border-radius: 10px; opacity: .7;' title='Correct hosting!
- Sites of our students are here.'>
-		<a href="https://www.000webhost.com/922191.html" onClick="this.href='https://www.000webhost.com/922191.html'"  target="_blank"><img src="https://www.000webhost.com/images/banners/160x600/banner4.gif" alt="Web hosting" width="120" height="450" border="0" /></a>
-	</div>
-</div>
-<!--Right ads block. End-->	
 	</body>
 <script>
 		document.onmousemove = moveTip;
