--- a/receptor_2_localstorage/index.html
+++ b/receptor_2_localstorage/index.html
@@ -11,7 +11,6 @@
 	<link rel='stylesheet' 				href='css/reset.css'>
 	<link rel='stylesheet' 				href='css/style.css'>
 	<link rel='shortcut icon' 			href='favicon.ico'>
-	<script src='js/init.js'></script>
 </head>
 <body>
 <!--Multilevel menu extending from the edge of the screen when you click on the logo-->
@@ -20,20 +19,32 @@
 		<label for="showmenu" class="showmenu"><img style='left: 100px;' src='res/logo.png' title='меню' alt=''></label>
 		<ul>
 			<li>
-				<a href="index.html">Рецепты</a>
+				<a href="index.html">Как пользоваться:</a>
+				<input type="checkbox" id="menu1">
+				<label for="menu1">&#9660;</label>
+				<ul>
+					<li><a href="#"> - Включить систему("on")</a></li>
+					<li><a href="#"> - Загрузить дозатор 1("load")</a></li>
+					<li><a href="#"> - Загрузить дозатор 2("load")</a></li>
+					<li><a href="#"> - Выбрать рецепт в меню ниже</a></li>
+					<li><a href="#"> - Запустить процесс("run")</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="index.html">Каков % присадки?</a>
 				<input type="checkbox" id="menu2">
 				<label for="menu2">&#9660;</label>
 				<ul>
-					<li><a href="#">Рецепт_1</a></li>
-					<li><a href="#">Рецепт_2</a></li>
-					<li><a href="#">Рецепт_3</a></li>
-					<li><a href="#">Рецепт_4</a></li>
-					<li><a href="#">Рецепт_5</a></li>
-					<li><a href="#">Рецепт_6</a></li>
-					<li><a href="#">Рецепт_7</a></li>
-					<li><a href="#">Рецепт_8</a></li>
-					<li><a href="#">Рецепт_9</a></li>
-					<li><a href="#">Рецепт_10</a></li>
+					<li><a id='recipe_1' href="#" 	onclick = 'choose_recipe(this.id)'>1%</a></li>
+					<li><a id='recipe_2' href="#" 	onclick = 'choose_recipe(this.id)'>2%</a></li>
+					<li><a id='recipe_3' href="#" 	onclick = 'choose_recipe(this.id)'>3%</a></li>
+					<li><a id='recipe_4' href="#" 	onclick = 'choose_recipe(this.id)'>4%</a></li>
+					<li><a id='recipe_5' href="#" 	onclick = 'choose_recipe(this.id)'>5%</a></li>
+					<li><a id='recipe_6' href="#" 	onclick = 'choose_recipe(this.id)'>6%</a></li>
+					<li><a id='recipe_7' href="#" 	onclick = 'choose_recipe(this.id)'>7%</a></li>
+					<li><a id='recipe_8' href="#" 	onclick = 'choose_recipe(this.id)'>8%</a></li>
+					<li><a id='recipe_9' href="#" 	onclick = 'choose_recipe(this.id)'>9%</a></li>
+					<li><a id='recipe_10' href="#" 	onclick = 'choose_recipe(this.id)'>10%</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -42,12 +53,11 @@
 	<section>
 		<div  style='position: absolute; margin: 160px auto auto 48%; width: 380px; transform: translate(-50%, 0);'>
 <!--Visualisation-->
-			<button id='on' style='top:-100px; left:65px;'>on</button>
-			<button id='run' style='top:-100px; left:170px;'>run</button>
-			<button id='pause' style='top:-70px; left:160px;'>pause</button>
-			<button id='off' style='top:-100px; right:65px;'>off</button>
+			<button id='on' style='top:-50px; left:65px;'>on</button>
+			<button id='run' style='top:-50px; left:170px;'>run</button>
+			<button id='off' style='top:-50px; right:65px;'>off</button>
 			
-			<button id='load_1' style='top:22px; left:0px;'>load</button>
+			<button id='load_1' style='top:48px; left:16px;'>load</button>
 			<button id='load_2' style='top:22px; right:0px;'>load</button>
 			
 			<button id='sanit' style='top:264px; right:55px;'>sanit</button>
@@ -57,13 +67,13 @@
 			<img id='mixer_1' class='mixer' style='top:195px;left:140px;' alt=''>
 			<img id='mixer_1_stirrer' class='stirrer' style='top:195px;left:140px;'	alt=''>
 			<img id='mixer_1_tap_1' class='tap' style='top:295px;left:180px;' alt=''>
-			<img id='mixer_1_sensor_max' class='sensor'	style='top:232px;left:160px;' alt=''>
+			<img id='mixer_1_sensor_max' class='sensor'	style='top:212px;left:160px;' alt=''>
 			<img id='mixer_1_sensor_min' class='sensor'	style='top:285px;left:187px;' alt=''>
 <!--Batcher №1-->
 			<marquee  style='top:-10px; left: 80px;'><p id='console_batcher_1'></p></marquee>
-			<img id='batcher_1' class='tank' style='top:20px;left:80px;' alt='batcher'>
-			<img id='batcher_1_sensor_max' class='sensor' style='top:48px;left:100px;' alt='sensor_max'>
-			<img id='batcher_1_sensor_min' class='sensor' style='top:100px;left:127px;' alt='sensor_min'>
+			<img id='batcher_1' class='tank_small' style='top:50px;left:95px;' alt='batcher'>
+			<img id='batcher_1_sensor_max' class='sensor' style='top:63px;left:112px;' alt='sensor_max'>
+			<img id='batcher_1_sensor_min' class='sensor' style='top:110px;left:127px;' alt='sensor_min'>
 			<img id='batcher_1_tap_1' class='tap' style='top:120px;left:120px;'	alt='tap'>
 			<img id='batcher_1_tube_1' class='tube' style='top:140px;left:120px;' alt='tube'>
 			<img id='batcher_1_tube_2' class='tube' style='top:160px;left:120px;' alt='tube'>
@@ -72,7 +82,7 @@
 <!--Batcher №2-->
 			<marquee  style='top:-10px; left: 200px;'><p id='console_batcher_2'></p></marquee>
 			<img id='batcher_2' class='tank' style='top:20px;left:200px;' alt=''>
-			<img id='batcher_2_sensor_max' class='sensor' style='top:48px;left:220px;' alt=''>
+			<img id='batcher_2_sensor_max' class='sensor' style='top:40px;left:220px;' alt=''>
 			<img id='batcher_2_sensor_min' class='sensor' style='top:100px;left:247px;'	alt=''>
 			<img id='batcher_2_tap_1' class='tap' style='top:120px;left:240px;'	alt=''>
 			<img id='batcher_2_tube_1' class='tube' style='top:140px;left:240px;' alt='tube'>
