--- a/receptor_2_localstorage/index.html
+++ b/receptor_2_localstorage/index.html
@@ -26,7 +26,7 @@
 					<li><a href="#"> - Включить систему("on")</a></li>
 					<li><a href="#"> - Загрузить дозатор 1("load")</a></li>
 					<li><a href="#"> - Загрузить дозатор 2("load")</a></li>
-					<li><a href="#"> - Выбрать рецепт в меню ниже</a></li>
+					<li><a href="#"> - Выбрать % присадки в меню ниже</a></li>
 					<li><a href="#"> - Запустить процесс("run")</a></li>
 				</ul>
 			</li>
